--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,26 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  <title>Test Page: Don't Panic</title>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="/css/main.css">
-</head>
-
+  {% include head.html %}
   <body>
-    <header class="header">
-  <nav>
-    <ul class="header-nav nav-links">
-      <li><a href="/">Home</a></li>
-<li><a href="#">Nav 1</a></li>
-<li><a href="#">Nav 2</a></li>
-<li><a href="#">Nav 3</a></li>
-
-    </ul>
-  </nav>
-  <a href="/" class="header-logo">
-    <img src="/images/logo.png" alt="Learn Enough">
-  </a>
-</header>
+    {% include header.html %}
     <div class="full-hero hero-home">
       <h1>I'm an h1</h1>
       <ul class="social-list">
@@ -127,20 +109,6 @@
     Other related tutorials can be found at
     <a href="https://learnenough.com/">learnenough.com</a>.
   </p>
-  <footer class="footer">
-  <a class="footer-logo" href="/">
-    <img src="/images/logo.png" alt="Learn Enough"/>
-  </a>
-  <nav>
-    <ul class="footer-nav nav-links">
-      <li><a href="/">Home</a></li>
-<li><a href="#">Nav 1</a></li>
-<li><a href="#">Nav 2</a></li>
-<li><a href="#">Nav 3</a></li>
-
-    </ul>
-  </nav>
-  <h3>Learn Enough <span>to Be Dangerous</span></h3>
-</footer>
+  {% include footer.html %}
   </body>
 </html>
